# hyperliquid-rust-sdk

./: Cargo.toml
.claude/: settings.local.json
src/: errors.rs  helpers.rs  lib.rs  market_maker.rs  meta.rs
src/exchange/: actions.rs  exchange_client.rs  exchange_responses.rs  mod.rs  order.rs
src/info/: info_client.rs  sub_structs.rs
src/signature/: create_signature.rs
src/ws/: sub_structs.rs  ws_manager.rs
